--- a/index.html
+++ b/index.html
@@ -134,12 +134,17 @@
     </div>
     <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
 
-
-    <script>
+    <!-- usado para escrever códigos javascript dentro do html -->
+    <script> 
         new window.VLibras.Widget('https://vlibras.gov.br/app');
     </script>
 
-
+    <script>
+        alert('Minha primera mensagem');
+        confirm('Você está gostando da Linguagem Javascript');
+        prompt('Qual seu nome?');
+    </script>
+    <!-- utilizado para chamar arquivo externo de Javascript -->
     <script src="script.js"></script>
 </body>
 
