--- a/aula2/ex02.html
+++ b/aula2/ex02.html
@@ -9,7 +9,7 @@
     <script>
         let nome = prompt('Hi what is your name?');
         let sobrenome = prompt('Can you tell me your last name too?');
-        alert('Nice to meet you ' + nome + ' ' + sobrenome);
+        alert('Nice to meet you ' + nome + sobrenome);
     </script>
 </body>
 </html>
